@@ -6,6 +6,7 @@ The following authors have contributed to LACAML:
 
   Egbert Ammicht        <eammicht@lucent.com>
   Patrick Cousot        <Patrick.Cousot@ens.fr>
+  Sam Ehrlichman        <sehrlichman@janestreet.com>
   Liam Stewart          <liam@cs.toronto.edu>
   Christophe Troestler  <Christophe.Troestler@umons.ac.be>
   Oleg Trott            <ot14@columbia.edu>
@@ -14,6 +15,6 @@ The following authors have contributed to LACAML:
 The following company has sponsored and has copyright in part of this work:
 
   Jane Street Holding, LLC
-  1 New York Plaza, 33rd Floor 
+  1 New York Plaza, 33rd Floor
   New York, NY 10004
   USA
