@@ -1,5 +1,5 @@
 name="lacaml"
-version="5.3.0"
+version="5.4.0"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
